footer overlapping problem is now fixed

--- a/packages/idealo.design/src/ui/components/Footer/Footer.module.scss
+++ b/packages/idealo.design/src/ui/components/Footer/Footer.module.scss
@@ -21,9 +21,9 @@
   display: flex;
   color: #D7E3EF;
   background-color: $color_marine_400;
-  height: 60px;
+  height: 4em;
   width: 100%;
-  position: relative;
+  position: absolute;
   bottom: 0;
 }
 
